--- a/code/.cccc/Job.html
+++ b/code/.cccc/Job.html
@@ -12,11 +12,11 @@ Detailed report on module Job
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    20</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    78</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 8.000</EM></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 2.051</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 1.300</TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.333</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    13</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -58,11 +58,11 @@ Detailed report on module Job
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Complete( &nbsp;bool&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        61">Job.cpp:61</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        70">Job.cpp:70</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        36">Job.h:36</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>Job( &nbsp;int, &nbsp;Manager *, &nbsp;vector&nbsp;)<BR>
 definition &nbsp;
@@ -82,83 +82,83 @@ declaration &nbsp;
 <TR>
 <TD>getComID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        39">Job.cpp:39</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        42">Job.cpp:42</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        30">Job.h:30</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        37">Job.cpp:37</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        39">Job.cpp:39</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        28">Job.h:28</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getUniqueID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        41">Job.cpp:41</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        45">Job.cpp:45</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        43">Job.h:43</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    16</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    16</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>isCompleted( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        57">Job.cpp:57</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        64">Job.cpp:64</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        32">Job.h:32</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>isHighlight( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        59">Job.cpp:59</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        67">Job.cpp:67</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        34">Job.h:34</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>printDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        68">Job.cpp:68</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        78">Job.cpp:78</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        38">Job.h:38</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>read( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        35">Job.cpp:35</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        36">Job.cpp:36</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        26">Job.h:26</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>removeEmp( &nbsp;Employee *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        77">Job.cpp:77</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        88">Job.cpp:88</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        40">Job.h:40</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>updateFile( &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        97">Job.cpp:97</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:       111">Job.cpp:111</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        44">Job.h:44</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    60</EM></TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     9</TD><TD ALIGN=RIGHT> 6.667</TD><TD ALIGN=RIGHT> 1.111</TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    60</EM></TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>    31</TD><TD ALIGN=RIGHT> 1.935</TD><TD ALIGN=RIGHT> 0.323</TD></TR>
 <TR>
 <TD>writeToFile( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        82">Job.cpp:82</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        94">Job.cpp:94</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        42">Job.h:42</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
 </TR></TABLE>
 <H2><A NAME="structdet">Relationships</A></H2>
@@ -170,12 +170,12 @@ Employee [V] <BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Employee.cpp:        34">Employee.cpp:34</A></CODE><BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Employee.h:        33">Employee.h:33</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Employee.h:        32">Employee.h:32</A></CODE><BR>
 <BR>
 <BR>
 Manager [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        30">Manager.cpp:30</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        34">Manager.cpp:34</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        27">Manager.h:27</A></CODE><BR>
 <BR>
@@ -190,7 +190,7 @@ has by reference &nbsp;
 <BR>
 Employee [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        77">Job.cpp:77</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        88">Job.cpp:88</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        40">Job.h:40</A></CODE><BR>
 <BR>
@@ -210,7 +210,7 @@ pass by reference &nbsp;
 <BR>
 bool [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Job.cpp:        61">Job.cpp:61</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Job.cpp:        70">Job.cpp:70</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Job.h:        19">Job.h:19</A></CODE><BR>
 has by value &nbsp;
