--- a/code/.cccc/Teacher.html
+++ b/code/.cccc/Teacher.html
@@ -12,11 +12,11 @@ Detailed report on module Teacher
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    48</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    66</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>39.333</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 3.576</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 8.000</EM></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.727</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    14</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -63,23 +63,23 @@ Detailed report on module Teacher
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Teacher( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:         6">Teacher.cpp:6</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:         7">Teacher.cpp:7</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        37">Teacher.h:37</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>Teacher( &nbsp;int, &nbsp;string&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:        12">Teacher.cpp:12</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:        14">Teacher.cpp:14</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        19">Teacher.h:19</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addComplaint( &nbsp;Complaint *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       231">Teacher.cpp:231</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       240">Teacher.cpp:240</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        33">Teacher.h:33</A></CODE><BR>
 <BR>
@@ -87,23 +87,23 @@ declaration &nbsp;
 <TR>
 <TD>complaintDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:        74">Teacher.cpp:74</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:        82">Teacher.cpp:82</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        39">Teacher.h:39</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    33</EM></TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    33</EM></TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>    20</TD><TD ALIGN=RIGHT> 1.650</TD><TD ALIGN=RIGHT> 0.300</TD></TR>
 <TR>
 <TD>control( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:        18">Teacher.cpp:18</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:        21">Teacher.cpp:21</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        21">Teacher.h:21</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    21</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    21</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT> 1.500</TD><TD ALIGN=RIGHT> 0.429</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       227">Teacher.cpp:227</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       236">Teacher.cpp:236</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        29">Teacher.h:29</A></CODE><BR>
 <BR>
@@ -111,7 +111,7 @@ declaration &nbsp;
 <TR>
 <TD>getName( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       229">Teacher.cpp:229</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       238">Teacher.cpp:238</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        31">Teacher.h:31</A></CODE><BR>
 <BR>
@@ -119,7 +119,7 @@ declaration &nbsp;
 <TR>
 <TD>getUniqueID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       210">Teacher.cpp:210</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       219">Teacher.cpp:219</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        27">Teacher.h:27</A></CODE><BR>
 <BR>
@@ -127,7 +127,7 @@ declaration &nbsp;
 <TR>
 <TD>makeComplaint( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       116">Teacher.cpp:116</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       125">Teacher.cpp:125</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        40">Teacher.h:40</A></CODE><BR>
 <BR>
@@ -135,7 +135,7 @@ declaration &nbsp;
 <TR>
 <TD>markAsUnallocated( &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       233">Teacher.cpp:233</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       242">Teacher.cpp:242</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        35">Teacher.h:35</A></CODE><BR>
 <BR>
@@ -143,23 +143,23 @@ declaration &nbsp;
 <TR>
 <TD>printDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       111">Teacher.cpp:111</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       120">Teacher.cpp:120</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        23">Teacher.h:23</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>printInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:        44">Teacher.cpp:44</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:        49">Teacher.cpp:49</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        38">Teacher.h:38</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT>    28</TD><TD ALIGN=RIGHT>    10</TD><TD ALIGN=RIGHT>    18</TD><TD ALIGN=RIGHT> 1.556</TD><TD ALIGN=RIGHT> 0.556</TD></TR>
 <TR>
 <TD>reocordFeedback( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       132">Teacher.cpp:132</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       141">Teacher.cpp:141</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        41">Teacher.h:41</A></CODE><BR>
 <BR>
@@ -167,7 +167,7 @@ declaration &nbsp;
 <TR>
 <TD>writeToFile( &nbsp;const Teacher &amp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       202">Teacher.cpp:202</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       211">Teacher.cpp:211</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        25">Teacher.h:25</A></CODE><BR>
 <BR>
@@ -189,7 +189,7 @@ has by reference &nbsp;
 <TD WIDTH=50%>
 Complaint [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:       231">Teacher.cpp:231</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:       240">Teacher.cpp:240</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        33">Teacher.h:33</A></CODE><BR>
 <BR>
@@ -201,7 +201,7 @@ inheritance &nbsp;
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Teacher.cpp:        12">Teacher.cpp:12</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Teacher.cpp:        14">Teacher.cpp:14</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Teacher.h:        15">Teacher.h:15</A></CODE><BR>
 pass by value &nbsp;
