--- a/code/.cccc/Manager.html
+++ b/code/.cccc/Manager.html
@@ -12,11 +12,11 @@ Detailed report on module Manager
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    68</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
-<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
+<TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    78</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>42.000</STRONG></TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 3.769</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM> 9.714</EM></TD><TD>&nbsp;</TD></TR>
+<TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.872</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Weighted Methods per Class ( &nbsp;weighting = unity&nbsp;)</TD><TD>WMC1</TD><TD ALIGN=RIGHT>    16</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -68,79 +68,79 @@ Detailed report on module Manager
 <TD WIDTH=50%>Function prototype</TD><TH BGCOLOR="AQUA" WIDTH=10%>LOC</TH><TH BGCOLOR="AQUA" WIDTH=10%>MVG</TH><TH BGCOLOR="AQUA" WIDTH=10%>COM</TH><TH BGCOLOR="AQUA" WIDTH=10%>L_C</TH><TH BGCOLOR="AQUA" WIDTH=10%>M_C</TH><TR>
 <TD>Manager( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:         8">Manager.cpp:8</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:         9">Manager.cpp:9</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        50">Manager.h:50</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>Manager( &nbsp;int, &nbsp;string&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        15">Manager.cpp:15</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        17">Manager.cpp:17</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        23">Manager.h:23</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addDept( &nbsp;Department *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        22">Manager.cpp:22</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        25">Manager.cpp:25</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        25">Manager.h:25</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>addJob( &nbsp;Job *&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        30">Manager.cpp:30</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        34">Manager.cpp:34</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        27">Manager.h:27</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>control( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        32">Manager.cpp:32</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        37">Manager.cpp:37</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        29">Manager.h:29</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    36</EM></TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    36</EM></TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>    17</TD><TD ALIGN=RIGHT> 2.118</TD><TD ALIGN=RIGHT> 0.412</TD></TR>
 <TR>
 <TD>getDeptId( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       275">Manager.cpp:275</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       290">Manager.cpp:290</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        39">Manager.h:39</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       271">Manager.cpp:271</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       285">Manager.cpp:285</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        37">Manager.h:37</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getName( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       279">Manager.cpp:279</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       295">Manager.cpp:295</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        41">Manager.h:41</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getUniqueID( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       255">Manager.cpp:255</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       266">Manager.cpp:266</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        35">Manager.h:35</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>    11</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>markAsUnallocated( &nbsp;int&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       296">Manager.cpp:296</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       312">Manager.cpp:312</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        43">Manager.h:43</A></CODE><BR>
 <BR>
@@ -148,7 +148,7 @@ declaration &nbsp;
 <TR>
 <TD>printDetail( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       181">Manager.cpp:181</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       190">Manager.cpp:190</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        31">Manager.h:31</A></CODE><BR>
 <BR>
@@ -156,15 +156,15 @@ declaration &nbsp;
 <TR>
 <TD>printInterface( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        74">Manager.cpp:74</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        82">Manager.cpp:82</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        47">Manager.h:47</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    31</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    13</EM></TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    31</EM></TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    13</EM></TD><TD ALIGN=RIGHT>    20</TD><TD ALIGN=RIGHT> 1.550</TD><TD ALIGN=RIGHT> 0.650</TD></TR>
 <TR>
 <TD>reviewComplaint( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       186">Manager.cpp:186</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       195">Manager.cpp:195</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        49">Manager.h:49</A></CODE><BR>
 <BR>
@@ -172,7 +172,7 @@ declaration &nbsp;
 <TR>
 <TD>viewNotif_E( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       107">Manager.cpp:107</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       116">Manager.cpp:116</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        48">Manager.h:48</A></CODE><BR>
 <BR>
@@ -180,15 +180,15 @@ declaration &nbsp;
 <TR>
 <TD>writeToFile( &nbsp;const Manager &amp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       247">Manager.cpp:247</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       257">Manager.cpp:257</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        33">Manager.h:33</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
+</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>~Manager( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:       283">Manager.cpp:283</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:       299">Manager.cpp:299</A></CODE><BR>
 declaration &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        45">Manager.h:45</A></CODE><BR>
 <BR>
@@ -240,14 +240,14 @@ pass by reference &nbsp;
 <TD WIDTH=50%>
 Department [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        22">Manager.cpp:22</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        25">Manager.cpp:25</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        25">Manager.h:25</A></CODE><BR>
 <BR>
 <BR>
 Job [V] <BR>
 pass by reference &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        30">Manager.cpp:30</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        34">Manager.cpp:34</A></CODE><BR>
 pass by reference &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        27">Manager.h:27</A></CODE><BR>
 <BR>
@@ -264,7 +264,7 @@ inheritance &nbsp;
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#Manager.cpp:        15">Manager.cpp:15</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#Manager.cpp:        17">Manager.cpp:17</A></CODE><BR>
 has by value &nbsp;
 <CODE><A HREF="cccc_src.html#Manager.h:        19">Manager.h:19</A></CODE><BR>
 pass by value &nbsp;
